--- a/src/pages/main.css
+++ b/src/pages/main.css
@@ -1,12 +1,12 @@
 .main {
   max-width: 1440px;
-  padding: 16px 80px 16px 80px;
+  padding:0px 80px 16px 80px;
   box-sizing: content-box;
   margin: 0 auto;
 }
 
 @media (max-width: 768px) {
   .main {
-    padding: 16px;
+    padding: 0 16px;
   }
 }
