--- a/src/components/EmptyResults/emptyResults.css
+++ b/src/components/EmptyResults/emptyResults.css
@@ -1,5 +1,6 @@
 .empty-results {
   color: rgba(120, 120, 120, 1);
   font-size: 16px;
-  margin-top: 40px !important;
+  margin-top: 24px;
+  font-family: Arial, sans-serif !important;
 }
