--- a/src/index.css
+++ b/src/index.css
@@ -33,4 +33,10 @@ body {
     position: absolute;
     top: 0;
   }
+  .ant-image-preview-close {
+    background-color: rgba(255, 255, 255, 1);
+  }
+  .ant-image-preview-close svg {
+    fill: rgba(0, 0, 0, 0.4) !important;
+  }
 }
