--- a/src/modules/SearchField/search.css
+++ b/src/modules/SearchField/search.css
@@ -3,10 +3,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  /* height: 100vh;
-  flex-direction: column; */
 }
 
 .search-active {
-  margin: 24px 0px 12px 0px;
+  padding: 40px 0px 16px 0px;
+  position: sticky;
+  top: 0px;
+  z-index: 1000;
+  background: white;
 }
